[497925] support new query result view in additional UI features
	Added a common IFilteredMatcherContent interface
	Added a common IFilteredMatcherCollection interface
	Local search debugger ported
	Rete visualization ported
	Testing framework ported
	Viewers sandbox ported
	re-organized perspective extensions
	added active engine property tester
	

Change-Id: I2baa8b76a0fd4b4bd348da7fa0f975c718c98e15
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/addon/plugins/org.eclipse.viatra.addon.querybyexample.ui/plugin.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.querybyexample.ui/plugin.xml
@@ -195,4 +195,20 @@
             
       
 	</extension>
+ <extension
+       point="org.eclipse.ui.perspectiveExtensions">
+    <perspectiveExtension
+          targetID="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
+       <view
+             id="org.eclipse.viatra.addon.querybyexample.ui.qbeview"
+             minimized="false"
+             relationship="stack"
+             relative="org.eclipse.ui.views.ContentOutline"
+             visible="false">
+       </view>
+       <viewShortcut
+             id="org.eclipse.viatra.addon.querybyexample.ui.qbeview">
+       </viewShortcut>
+    </perspectiveExtension>
+ </extension>
 </plugin>
