--- a/addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui/plugin.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui/plugin.xml
@@ -12,9 +12,13 @@
                label="Reinitialize VIATRA Viewers"
                style="push">
          </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="menu:org.eclipse.viatra.query.tooling.ui.queryresult.QueryResultView">
          <command
-               commandId="org.eclipse.viatra.addon.viewers.tooling.ui.initViewers.resource"
-               label="Reinitialize VIATRA Viewers (resource scope)"
+               commandId="org.eclipse.viatra.addon.viewers.tooling.ui.initViewers.resourceset"
+               label="Reinitialize VIATRA Viewers"
                style="push">
          </command>
       </menuContribution>
@@ -77,22 +81,14 @@
             class="org.eclipse.viatra.addon.viewers.tooling.ui.handlers.InitializeViewersHandlerResourceSet"
             commandId="org.eclipse.viatra.addon.viewers.tooling.ui.initViewers.resourceset">
          <enabledWhen>
-            <with
-                  variable="selection">
-               <count
-                     value="1">
-               </count>
-               <iterate>
-                  <or>
-                     <instanceof
-                           value="org.eclipse.viatra.query.tooling.ui.queryexplorer.content.matcher.PatternMatcherContent">
-                     </instanceof>
-                     <instanceof
-                           value="org.eclipse.viatra.query.tooling.ui.queryexplorer.content.matcher.PatternMatcherRootContent">
-                     </instanceof>
-                  </or>
-               </iterate>
-            </with>
+            <or>
+               <reference
+                     definitionId="org.eclipse.viatra.query.tooling.ui.root">
+               </reference>
+               <reference
+                     definitionId="org.eclipse.viatra.query.tooling.ui.filteredmatchercontent">
+               </reference>
+            </or>
          </enabledWhen>
       </handler>
       
