--- a/query/plugins/org.eclipse.viatra.query.tooling.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui/plugin.xml
@@ -67,35 +67,15 @@
          point="org.eclipse.ui.perspectiveExtensions">
       <perspectiveExtension
             targetID="org.eclipse.jdt.ui.JavaPerspective">
-         <view
-               id="org.eclipse.viatra.query.tooling.ui.queryexplorer.QueryExplorer"
-               ratio="0.5"
-               relationship="stack"
-               relative="org.eclipse.ui.views.ProblemView"
-               visible="false">
-         </view>
          <newWizardShortcut
                id="org.eclipse.viatra.query.tooling.ui.newvqlfile">
          </newWizardShortcut>
       </perspectiveExtension>
       <perspectiveExtension
             targetID="org.eclipse.pde.ui.PDEPerspective">
-         <view
-               id="org.eclipse.viatra.query.tooling.ui.queryexplorer.QueryExplorer"
-               ratio="0.5"
-               relationship="stack"
-               relative="org.eclipse.ui.views.ProblemView"
-               visible="false">
-         </view>
          <newWizardShortcut
                id="org.eclipse.viatra.query.tooling.ui.newvqlfile">
          </newWizardShortcut>
-      </perspectiveExtension>
-      <perspectiveExtension
-            targetID="org.eclipse.debug.ui.DebugPerspective">
-         <viewShortcut
-               id="org.eclipse.viatra.query.tooling.ui.queryexplorer.QueryExplorer">
-         </viewShortcut>
       </perspectiveExtension>
       <perspectiveExtension
             targetID="org.eclipse.viatra.query.tooling.ui.TransformationDevPerspective">
@@ -123,7 +103,8 @@
                id="org.eclipse.viatra.query.tooling.ui.queryexplorer.QueryExplorer"
                minimized="false"
                relationship="stack"
-               relative="org.eclipse.ui.views.PropertySheet">
+               relative="org.eclipse.ui.views.PropertySheet"
+               visible="false">
          </view>
          <view
                id="org.eclipse.amalgam.explorer.contextual.ui.view.ExplorerContextualID"
@@ -152,9 +133,6 @@
                relationship="stack"
                relative="org.eclipse.ui.views.PropertySheet">
          </view>
-         <viewShortcut
-               id="org.eclipse.viatra.query.tooling.ui.queryexplorer.QueryExplorer">
-         </viewShortcut>
          <viewShortcut
                id="org.eclipse.ui.views.PropertySheet">
          </viewShortcut>
@@ -296,6 +274,18 @@
             <equals
                   value="org.eclipse.viatra.query.patternlanguage.emf.EMFPatternLanguage">
             </equals>
+         </with>
+      </definition>
+      <definition
+            id="org.eclipse.viatra.query.tooling.ui.filteredmatchercontent">
+            <with
+               variable="selection">
+            <iterate
+                  ifEmpty="false">
+               <instanceof
+                     value="org.eclipse.viatra.query.tooling.ui.util.IFilteredMatcherContent">
+               </instanceof>
+            </iterate>
          </with>
       </definition>
    </extension>
