--- a/releng/org.eclipse.viatra.docs/build.properties
+++ b/releng/org.eclipse.viatra.docs/build.properties
@@ -12,7 +12,7 @@ platform:/plugin/org.eclipse.viatra.cep.core.metamodels,\
 platform:/plugin/org.eclipse.viatra.cep.emf.notification,\
 platform:/plugin/org.eclipse.viatra.cep.tooling.core,\
 platform:/plugin/org.eclipse.viatra.cep.vepl,\
-platform:/plugin/org.eclipse.viatra.dse.base,\
+platform:/plugin/org.eclipse.viatra.dse,\
 platform:/plugin/org.eclipse.viatra.dse.genetic,\
 platform:/plugin/org.eclipse.viatra.integration.mwe2,\
 platform:/plugin/org.eclipse.viatra.integration.uml,\
