--- a/dse/plugins/org.eclipse.viatra.dse/pom.xml
+++ b/dse/plugins/org.eclipse.viatra.dse/pom.xml
@@ -9,6 +9,6 @@
 		<version>0.14.0-SNAPSHOT</version>
 		<relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
 	</parent>
-	<artifactId>org.eclipse.viatra.dse.base</artifactId>
+	<artifactId>org.eclipse.viatra.dse</artifactId>
 	<packaging>eclipse-plugin</packaging>
 </project>
