[498974] Add SCM revision ID to manifests
Change-Id: I5935c4552ae2f9e96c6c8cf5532da3e75fd315d3
Signed-off-by: Grill Balazs <balazs.grill@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -52,6 +52,23 @@
 				</executions>
 			</plugin>
 			<plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>false</doUpdate>
+                </configuration>
+            </plugin>
+			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-packaging-plugin</artifactId>
 				<version>${tycho.version}</version>
@@ -59,6 +76,11 @@
 					<sourceReferences>
 						<generate>true</generate>
 					</sourceReferences>
+					<archive>
+					    <manifestEntries>
+					       <SCM-Revision>${buildNumber}</SCM-Revision>
+					    </manifestEntries>
+					</archive>
 				</configuration>
 				<dependencies>
 					<dependency>
