[499670] Graduate query browser plugin into SDK feature
Change-Id: I40813d84f4d92648388e016a0cc64c0cc994aaaa
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -22,6 +22,7 @@
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.generator.model.ui</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.core</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui</module>
+		<module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.browser</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.debug</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.migrator</module>
 		<module>../../query/tests/org.eclipse.viatra.query.patternlanguage.tests</module>
