--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.browser/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.browser/pom.xml
@@ -3,10 +3,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-        <artifactId>org.eclipse.viatra.parent.incubation</artifactId>
+        <artifactId>org.eclipse.viatra.parent.all</artifactId>
         <groupId>org.eclipse.viatra</groupId>
-        <version>0.14.0-SNAPSHOT</version>
-        <relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
+        <version>1.4.0-SNAPSHOT</version>
+        <relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
     </parent>
   <artifactId>org.eclipse.viatra.query.tooling.ui.browser</artifactId>
   <packaging>eclipse-plugin</packaging>
